--- a/PythonMilestone2SolutionsCardGame.ipynb
+++ b/PythonMilestone2SolutionsCardGame.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -77,58 +77,58 @@
      "output_type": "stream",
      "text": [
       "The deck has:\n",
-      " Ace of Diamonds\n",
-      " Six of Spades\n",
       " Queen of Clubs\n",
-      " Two of Spades\n",
-      " Six of Hearts\n",
-      " Two of Clubs\n",
+      " King of Spades\n",
+      " Three of Spades\n",
+      " Seven of Diamonds\n",
       " Six of Clubs\n",
-      " Jack of Hearts\n",
-      " Ace of Clubs\n",
-      " Eight of Clubs\n",
-      " Jack of Clubs\n",
-      " Ten of Clubs\n",
-      " King of Hearts\n",
-      " Nine of Diamonds\n",
-      " Ace of Spades\n",
-      " Seven of Clubs\n",
-      " Nine of Hearts\n",
-      " Seven of Hearts\n",
-      " Six of Diamonds\n",
+      " King of Clubs\n",
+      " King of Diamonds\n",
+      " Ten of Diamonds\n",
+      " Queen of Hearts\n",
+      " Queen of Spades\n",
       " Four of Hearts\n",
-      " Five of Clubs\n",
-      " Four of Diamonds\n",
+      " Three of Clubs\n",
+      " Nine of Hearts\n",
+      " Jack of Spades\n",
+      " Jack of Hearts\n",
+      " Seven of Clubs\n",
+      " Ten of Hearts\n",
       " Two of Hearts\n",
+      " Queen of Diamonds\n",
+      " Eight of Diamonds\n",
+      " Four of Diamonds\n",
+      " Two of Spades\n",
+      " Ace of Spades\n",
+      " Two of Diamonds\n",
+      " Jack of Clubs\n",
+      " Two of Clubs\n",
+      " Nine of Clubs\n",
+      " Four of Clubs\n",
+      " Eight of Clubs\n",
+      " Six of Hearts\n",
+      " Ten of Spades\n",
+      " King of Hearts\n",
       " Three of Hearts\n",
       " Eight of Hearts\n",
-      " Three of Spades\n",
-      " Eight of Diamonds\n",
-      " Nine of Clubs\n",
-      " Three of Diamonds\n",
-      " Seven of Diamonds\n",
-      " Five of Hearts\n",
-      " Queen of Diamonds\n",
-      " Nine of Spades\n",
-      " Queen of Hearts\n",
-      " Jack of Spades\n",
-      " Three of Clubs\n",
-      " Ten of Hearts\n",
-      " Two of Diamonds\n",
+      " Ace of Clubs\n",
+      " Ace of Hearts\n",
+      " Six of Spades\n",
       " Five of Spades\n",
-      " Jack of Diamonds\n",
-      " Ten of Spades\n",
-      " Four of Spades\n",
-      " Eight of Spades\n",
-      " Queen of Spades\n",
-      " King of Clubs\n",
-      " Ten of Diamonds\n",
       " Seven of Spades\n",
-      " King of Diamonds\n",
+      " Jack of Diamonds\n",
+      " Five of Hearts\n",
+      " Six of Diamonds\n",
+      " Nine of Diamonds\n",
+      " Ten of Clubs\n",
+      " Nine of Spades\n",
+      " Seven of Hearts\n",
+      " Eight of Spades\n",
       " Five of Diamonds\n",
-      " King of Spades\n",
-      " Four of Clubs\n",
-      " Ace of Hearts\n"
+      " Four of Spades\n",
+      " Three of Diamonds\n",
+      " Five of Clubs\n",
+      " Ace of Diamonds\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
     "\n",
     "        #if total value > 21 and I still have an ace\n",
     "        #then change my ace to be 1 instead of an 11\n",
-    "        while self.value > 21 and self.ace > 0:\n",
+    "        while self.value > 21 and self.aces > 0:\n",
     "            self.value -= 10\n",
     "            self.aces -= 1\n",
     "        "
@@ -173,15 +173,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero = 0\n",
+    "one = 1\n",
+    "two = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 0:\n",
+    "    print('TRUE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ace of Hearts\n",
-      "11\n"
+      "Jack of Clubs\n",
+      "10\n"
      ]
     }
    ],
@@ -200,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "12"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,16 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create chips class\n",
     "class Chips:\n",
     "    \n",
-    "    def _init_(self,total=100):\n",
-    "        self.total = total #this can be set by default value or supplied by user input\n",
+    "    def __init__(self):\n",
+    "        #this can be set by default value or supplied by user input\n",
+    "        self.total = total \n",
     "        self.bet = 0\n",
+    "        self.start = 0\n",
     "        \n",
     "    def win_bet(self):\n",
     "        self.total += self.bet\n",
@@ -248,6 +271,332 @@
     "        self.total -= self.bet\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for taking a bet\n",
+    "def take_bet(chips):\n",
+    "    \n",
+    "    while True:       \n",
+    "        try:\n",
+    "            chips.bet = int(input(\"How many chips would you like to bet? \\n\"))\n",
+    "        except ValueError:\n",
+    "            print(\"Sorry, please provide an integer \\n\")\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print('Sorry, you do not have enough chips! You have: ',chips.total)\n",
+    "            else:\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hit(deck,hand):\n",
+    "    \n",
+    "    single_card = deck.deal()\n",
+    "    hand.add_card(single_card)\n",
+    "    hand.adjust_for_ace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hit_or_stand(deck,hand):\n",
+    "    global playing #to control an upcoming while loop\n",
+    "    \n",
+    "    while True:\n",
+    "        x = input('Hit or Stand? Enter h or s \\n') #Hit # hh # stand\n",
+    " \n",
+    "        if x[0].lower() == 'h':\n",
+    "            hit(deck,hand)\n",
+    "        \n",
+    "        elif x[0].lower() == 's':\n",
+    "            print(\"Player Stands Dealer's Turn\")\n",
+    "            playing = False\n",
+    "            \n",
+    "        else:\n",
+    "            print(\"Sorry, I did no understand that. Please enter h or s only!\\n\")\n",
+    "            continue      \n",
+    "    \n",
+    "        break    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display players and dealers hand\n",
+    "\n",
+    "def show_some(player,dealer):\n",
+    "    print(\"\\nDealer's Hand:\")\n",
+    "    print(\" <card hidden>\")\n",
+    "    print('',dealer.cards[1])  \n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
+    "    \n",
+    "def show_all(player,dealer):\n",
+    "    print(\"\\nDealer's Hand:\", *dealer.cards, sep='\\n ')\n",
+    "    print(\"Dealer's Hand =\",dealer.value)\n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
+    "    print(\"Player's Hand =\",player.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# functions to handle end of game scenarios\n",
+    "\n",
+    "def player_busts(player,dealer,chips):\n",
+    "    print(\"BUST PLAYER!\")\n",
+    "    chips.lose_bet()\n",
+    "\n",
+    "def player_wins(player,dealer,chips):\n",
+    "    print('PLAYER WINS!')\n",
+    "    chips.win_bet()\n",
+    "\n",
+    "def dealer_busts(player,dealer,chips):\n",
+    "    print('PLAYER WINS! DEALER BUSTED!')\n",
+    "    chips.win_bet()\n",
+    "\n",
+    "def dealer_wins(player,dealer,chips):\n",
+    "    print('DEALER WINS!')\n",
+    "\n",
+    "def push(player,dealer):\n",
+    "    print('Dealer and player tie! PUSH')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WELCOME TO BLACKJACK\n",
+      "How many chips would you like for this game?\n",
+      "100\n",
+      "How many chips would you like to bet? \n",
+      "100\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Two of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Hearts\n",
+      " Five of Clubs\n",
+      "Hit or Stand? Enter h or s \n",
+      "h\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Two of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Hearts\n",
+      " Five of Clubs\n",
+      " Ten of Diamonds\n",
+      "Hit or Stand? Enter h or s \n",
+      "s\n",
+      "Player Stands Dealer's Turn\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Two of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Hearts\n",
+      " Five of Clubs\n",
+      " Ten of Diamonds\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " Five of Hearts\n",
+      " Two of Clubs\n",
+      " Jack of Clubs\n",
+      "Dealer's Hand = 17\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Hearts\n",
+      " Five of Clubs\n",
+      " Ten of Diamonds\n",
+      "Player's Hand = 21\n",
+      "PLAYER WINS!\n",
+      "\n",
+      " Player total chips are at:  200\n",
+      "Would you like to play another hand? y/n\n",
+      "y\n",
+      "WELCOME TO BLACKJACK\n",
+      "How many chips would you like for this game?\n",
+      "200\n",
+      "How many chips would you like to bet? \n",
+      "200\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Queen of Spades\n",
+      "\n",
+      "Player's Hand:\n",
+      " Nine of Spades\n",
+      " Ten of Spades\n",
+      "Hit or Stand? Enter h or s \n",
+      "s\n",
+      "Player Stands Dealer's Turn\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Queen of Spades\n",
+      "\n",
+      "Player's Hand:\n",
+      " Nine of Spades\n",
+      " Ten of Spades\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " Jack of Clubs\n",
+      " Queen of Spades\n",
+      "Dealer's Hand = 20\n",
+      "\n",
+      "Player's Hand:\n",
+      " Nine of Spades\n",
+      " Ten of Spades\n",
+      "Player's Hand = 19\n",
+      "DEALER WINS!\n",
+      "\n",
+      " Player total chips are at:  200\n"
+     ]
+    }
+   ],
+   "source": [
+    "#on to the game\n",
+    "while True:\n",
+    "    # print an opening statement\n",
+    "    \n",
+    "    print (\"WELCOME TO BLACKJACK\")\n",
+    "    \n",
+    "    # Create & shuffle the deck, deal two cards to each player\n",
+    "   \n",
+    "    deck = Deck()\n",
+    "    deck.shuffle()\n",
+    "    \n",
+    "    player_hand = Hand()\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "    \n",
+    "    dealer_hand = Hand()\n",
+    "    dealer_hand.add_card(deck.deal())\n",
+    "    dealer_hand.add_card(deck.deal())\n",
+    "    \n",
+    "    # Ask Player for the total chips to start game\n",
+    "    player_chips.start = player_chips.start + 1\n",
+    "    if player_chips < 1:\n",
+    "        total = int(input(\"How many chips would you like for this game?\\n\"))\n",
+    "            \n",
+    "    # Set up the Player's chips\n",
+    "    player_chips = Chips()\n",
+    "    \n",
+    "    # Prompt the Player for their bet\n",
+    "    take_bet(player_chips)\n",
+    "    \n",
+    "    # Show cards (but keep one dealer card hidden)\n",
+    "    show_some(player_hand,dealer_hand)\n",
+    "    \n",
+    "    while playing: #recall this variable from our hit or stand function\n",
+    "    \n",
+    "        # Prompt for Player to Hit or Stand\n",
+    "        hit_or_stand(deck,player_hand)\n",
+    "    \n",
+    "        # Show cards (but keep one delaer card hidden)\n",
+    "        show_some(player_hand,dealer_hand)\n",
+    "    \n",
+    "        # If player's hand exceeds 21, run player_busts() and break out of loop\n",
+    "        if player_hand.value > 21:\n",
+    "            player_busts(player_hand,dealer_hand,player_chips)         \n",
+    "            break\n",
+    "        \n",
+    "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17        \n",
+    "    if player_hand.value <= 21:\n",
+    "    \n",
+    "        while dealer_hand.value < 17:\n",
+    "            hit(deck,dealer_hand)\n",
+    "        \n",
+    "    # Show all cards\n",
+    "    show_all(player_hand,dealer_hand)\n",
+    "    \n",
+    "    # Run different winning scenarios\n",
+    "    if dealer_hand.value > 21:\n",
+    "        dealer_busts(player_hand,dealer_hand,player_chips)\n",
+    "        \n",
+    "    elif player_hand.value > 21:\n",
+    "        player_busts(player_hand,dealer_hand,player_chips )    \n",
+    "    \n",
+    "    elif dealer_hand.value > player_hand.value:\n",
+    "        dealer_wins(player_hand,dealer_hand,player_chips)\n",
+    "    \n",
+    "    elif dealer_hand.value < player_hand.value:\n",
+    "        player_wins(player_hand,dealer_hand,player_chips)\n",
+    "    \n",
+    "    else:\n",
+    "        push(player_hand,dealer_hand)\n",
+    "    \n",
+    "    # Inform Player of their chips total\n",
+    "    print('\\n Player total chips are at: ', player_chips.total)\n",
+    "\n",
+    "\n",
+    "  #  if chips.total= 0:\n",
+    "  #      print('\\n Player, you have no more chips - game over. Bye.')\n",
+    "  #      playing = False\n",
+    "  #      break\n",
+    "    \n",
+    "        \n",
+    "    # Ask to play again\n",
+    "    new_game = input(\"Would you like to play another hand? y/n\\n\")\n",
+    "    \n",
+    "    if new_game[0].lower() == 'y':\n",
+    "        playing = True\n",
+    "        continue\n",
+    "    else:\n",
+    "        print('Thank you for playing!')  \n",
+    "        break\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
