--- a/PythonMilestone2SolutionsCardGame.ipynb
+++ b/PythonMilestone2SolutionsCardGame.ipynb
@@ -77,58 +77,58 @@
      "output_type": "stream",
      "text": [
       "The deck has:\n",
-      " Queen of Clubs\n",
-      " King of Spades\n",
-      " Three of Spades\n",
-      " Seven of Diamonds\n",
-      " Six of Clubs\n",
-      " King of Clubs\n",
-      " King of Diamonds\n",
-      " Ten of Diamonds\n",
-      " Queen of Hearts\n",
-      " Queen of Spades\n",
-      " Four of Hearts\n",
-      " Three of Clubs\n",
-      " Nine of Hearts\n",
-      " Jack of Spades\n",
-      " Jack of Hearts\n",
-      " Seven of Clubs\n",
-      " Ten of Hearts\n",
-      " Two of Hearts\n",
-      " Queen of Diamonds\n",
-      " Eight of Diamonds\n",
-      " Four of Diamonds\n",
-      " Two of Spades\n",
-      " Ace of Spades\n",
-      " Two of Diamonds\n",
-      " Jack of Clubs\n",
-      " Two of Clubs\n",
-      " Nine of Clubs\n",
-      " Four of Clubs\n",
-      " Eight of Clubs\n",
-      " Six of Hearts\n",
-      " Ten of Spades\n",
-      " King of Hearts\n",
-      " Three of Hearts\n",
-      " Eight of Hearts\n",
-      " Ace of Clubs\n",
-      " Ace of Hearts\n",
-      " Six of Spades\n",
-      " Five of Spades\n",
-      " Seven of Spades\n",
-      " Jack of Diamonds\n",
-      " Five of Hearts\n",
-      " Six of Diamonds\n",
       " Nine of Diamonds\n",
-      " Ten of Clubs\n",
       " Nine of Spades\n",
       " Seven of Hearts\n",
-      " Eight of Spades\n",
-      " Five of Diamonds\n",
-      " Four of Spades\n",
-      " Three of Diamonds\n",
+      " Four of Clubs\n",
+      " Five of Hearts\n",
+      " Jack of Diamonds\n",
       " Five of Clubs\n",
-      " Ace of Diamonds\n"
+      " Six of Spades\n",
+      " Two of Clubs\n",
+      " King of Hearts\n",
+      " Three of Clubs\n",
+      " Ace of Clubs\n",
+      " Queen of Hearts\n",
+      " King of Clubs\n",
+      " Queen of Spades\n",
+      " Queen of Clubs\n",
+      " Ten of Diamonds\n",
+      " Ten of Clubs\n",
+      " Jack of Spades\n",
+      " Ten of Spades\n",
+      " Two of Spades\n",
+      " Four of Diamonds\n",
+      " Three of Hearts\n",
+      " Four of Spades\n",
+      " Jack of Clubs\n",
+      " Queen of Diamonds\n",
+      " Ace of Spades\n",
+      " King of Diamonds\n",
+      " Nine of Hearts\n",
+      " Ace of Hearts\n",
+      " Eight of Clubs\n",
+      " Three of Diamonds\n",
+      " Five of Spades\n",
+      " Eight of Hearts\n",
+      " Two of Diamonds\n",
+      " Seven of Diamonds\n",
+      " Seven of Clubs\n",
+      " Six of Diamonds\n",
+      " Three of Spades\n",
+      " Eight of Spades\n",
+      " Nine of Clubs\n",
+      " Six of Clubs\n",
+      " Jack of Hearts\n",
+      " Four of Hearts\n",
+      " Eight of Diamonds\n",
+      " Six of Hearts\n",
+      " Ace of Diamonds\n",
+      " Seven of Spades\n",
+      " Ten of Hearts\n",
+      " King of Spades\n",
+      " Five of Diamonds\n",
+      " Two of Hearts\n"
      ]
     }
    ],
@@ -175,33 +175,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "zero = 0\n",
-    "one = 1\n",
-    "two = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 0:\n",
-    "    print('TRUE')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jack of Clubs\n",
+      "King of Hearts\n",
       "10\n"
      ]
     }
@@ -221,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,9 +239,8 @@
     "    \n",
     "    def __init__(self):\n",
     "        #this can be set by default value or supplied by user input\n",
-    "        self.total = total \n",
+    "        self.total = 100 \n",
     "        self.bet = 0\n",
-    "        self.start = 0\n",
     "        \n",
     "    def win_bet(self):\n",
     "        self.total += self.bet\n",
@@ -274,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +304,7 @@
     "            playing = False\n",
     "            \n",
     "        else:\n",
-    "            print(\"Sorry, I did no understand that. Please enter h or s only!\\n\")\n",
+    "            print(\"Sorry, I did not understand that. Please enter h or s only!\\n\")\n",
     "            continue      \n",
     "    \n",
     "        break    "
@@ -334,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,6 +353,7 @@
     "\n",
     "def dealer_wins(player,dealer,chips):\n",
     "    print('DEALER WINS!')\n",
+    "    chips.lose_bet()\n",
     "\n",
     "def push(player,dealer):\n",
     "    print('Dealer and player tie! PUSH')"
@@ -390,95 +369,123 @@
      "output_type": "stream",
      "text": [
       "WELCOME TO BLACKJACK\n",
-      "How many chips would you like for this game?\n",
-      "100\n",
       "How many chips would you like to bet? \n",
       "100\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Two of Clubs\n",
+      " Five of Clubs\n",
       "\n",
       "Player's Hand:\n",
-      " Six of Hearts\n",
-      " Five of Clubs\n",
-      "Hit or Stand? Enter h or s \n",
-      "h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Two of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Six of Hearts\n",
-      " Five of Clubs\n",
-      " Ten of Diamonds\n",
+      " Nine of Clubs\n",
+      " Jack of Clubs\n",
       "Hit or Stand? Enter h or s \n",
       "s\n",
       "Player Stands Dealer's Turn\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Two of Clubs\n",
+      " Five of Clubs\n",
       "\n",
       "Player's Hand:\n",
-      " Six of Hearts\n",
-      " Five of Clubs\n",
-      " Ten of Diamonds\n",
+      " Nine of Clubs\n",
+      " Jack of Clubs\n",
       "\n",
       "Dealer's Hand:\n",
-      " Five of Hearts\n",
-      " Two of Clubs\n",
-      " Jack of Clubs\n",
+      " Four of Spades\n",
+      " Five of Clubs\n",
+      " Eight of Diamonds\n",
       "Dealer's Hand = 17\n",
       "\n",
       "Player's Hand:\n",
-      " Six of Hearts\n",
-      " Five of Clubs\n",
-      " Ten of Diamonds\n",
-      "Player's Hand = 21\n",
+      " Nine of Clubs\n",
+      " Jack of Clubs\n",
+      "Player's Hand = 19\n",
       "PLAYER WINS!\n",
       "\n",
       " Player total chips are at:  200\n",
       "Would you like to play another hand? y/n\n",
       "y\n",
       "WELCOME TO BLACKJACK\n",
-      "How many chips would you like for this game?\n",
-      "200\n",
       "How many chips would you like to bet? \n",
-      "200\n",
+      "50\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Queen of Spades\n",
+      " Eight of Hearts\n",
       "\n",
       "Player's Hand:\n",
-      " Nine of Spades\n",
-      " Ten of Spades\n",
+      " Queen of Hearts\n",
+      " Five of Diamonds\n",
       "Hit or Stand? Enter h or s \n",
       "s\n",
       "Player Stands Dealer's Turn\n",
       "\n",
       "Dealer's Hand:\n",
       " <card hidden>\n",
-      " Queen of Spades\n",
+      " Eight of Hearts\n",
       "\n",
       "Player's Hand:\n",
-      " Nine of Spades\n",
-      " Ten of Spades\n",
+      " Queen of Hearts\n",
+      " Five of Diamonds\n",
       "\n",
       "Dealer's Hand:\n",
-      " Jack of Clubs\n",
-      " Queen of Spades\n",
-      "Dealer's Hand = 20\n",
+      " Ace of Hearts\n",
+      " Eight of Hearts\n",
+      "Dealer's Hand = 19\n",
       "\n",
       "Player's Hand:\n",
-      " Nine of Spades\n",
-      " Ten of Spades\n",
-      "Player's Hand = 19\n",
+      " Queen of Hearts\n",
+      " Five of Diamonds\n",
+      "Player's Hand = 15\n",
       "DEALER WINS!\n",
       "\n",
-      " Player total chips are at:  200\n"
+      " Player total chips are at:  50\n",
+      "Would you like to play another hand? y/n\n",
+      "y\n",
+      "WELCOME TO BLACKJACK\n",
+      "How many chips would you like to bet? \n",
+      "50\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Jack of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ace of Spades\n",
+      " Six of Diamonds\n",
+      "Hit or Stand? Enter h or s \n",
+      "s\n",
+      "Player Stands Dealer's Turn\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Jack of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ace of Spades\n",
+      " Six of Diamonds\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " Four of Hearts\n",
+      " Jack of Clubs\n",
+      " Two of Hearts\n",
+      " King of Spades\n",
+      "Dealer's Hand = 26\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ace of Spades\n",
+      " Six of Diamonds\n",
+      "Player's Hand = 17\n",
+      "PLAYER WINS! DEALER BUSTED!\n",
+      "\n",
+      " Player total chips are at:  150\n",
+      "Would you like to play another hand? y/n\n",
+      "y\n",
+      "WELCOME TO BLACKJACK\n",
+      "How many chips would you like to bet? \n",
+      "150\n",
+      "Sorry, you do not have enough chips! You have:  100\n"
      ]
     }
    ],
@@ -503,10 +510,10 @@
     "    dealer_hand.add_card(deck.deal())\n",
     "    \n",
     "    # Ask Player for the total chips to start game\n",
-    "    player_chips.start = player_chips.start + 1\n",
-    "    if player_chips < 1:\n",
-    "        total = int(input(\"How many chips would you like for this game?\\n\"))\n",
-    "            \n",
+    "    #if start == 0:\n",
+    "       # total = int(input(\"How many chips would you like for this game?\\n\"))\n",
+    "       # start = 1\n",
+    "           \n",
     "    # Set up the Player's chips\n",
     "    player_chips = Chips()\n",
     "    \n",
@@ -558,10 +565,10 @@
     "    print('\\n Player total chips are at: ', player_chips.total)\n",
     "\n",
     "\n",
-    "  #  if chips.total= 0:\n",
-    "  #      print('\\n Player, you have no more chips - game over. Bye.')\n",
-    "  #      playing = False\n",
-    "  #      break\n",
+    "    #if total == 0:\n",
+    "        #print('\\n Player, you have no more chips - game over. Bye.')\n",
+    "        #playing = False\n",
+    "        #break\n",
     "    \n",
     "        \n",
     "    # Ask to play again\n",
@@ -576,6 +583,13 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
